make it run on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,16 @@ set(CMAKE_CXX_STANDARD 17)
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 
 find_package(OpenGL REQUIRED)
-find_package(GLFW3 REQUIRED)
-find_package(GLEW REQUIRED)
-find_package(nlohmann_json 3.11.2 REQUIRED)
 
 FILE(GLOB_RECURSE SRC_LIST ${CMAKE_CURRENT_LIST_DIR}/src/*.*)
 
 add_executable(GlslTest ${SRC_LIST})
 
-target_link_libraries(GlslTest ${GLFW3_LIBRARY} ${OPENGL_LIBRARY} ${GLEW_LIBRARIES} nlohmann_json::nlohmann_json)
-include_directories(GlslTest ${OPENGL_INCLUDE_DIR} ${GLFW3_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS} src)
+add_subdirectory(libs/glad)
+
+add_subdirectory(libs/nlohmann_json)
+
+add_subdirectory(libs/glfw)
+
+target_link_libraries(GlslTest ${OPENGL_LIBRARY} glad nlohmann_json::nlohmann_json glfw)
+include_directories(GlslTest ${OPENGL_INCLUDE_DIR} src)
