--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
+      - name: Install Ninja
+        if: matrix.os == ubuntu-latest
+        run: 'apt-get install ninja-build'
       - name: Build
         run: |
           cmake -G "Ninja" -DCMAKE_BUILD_TYPE="Release" -DCMAKE_C_COMPILER="clang" -DCMAKE_CXX_COMPILER="clang++" -DCMAKE_INSTALL_PREFIX="install" -B build .
